<resources>
    <string name="app_name">MiMO</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="app_tab_movies">Movies</string>
    <string name="app_tab_tv_show">TV Show</string>
    <string name="app_user_score">User Score</string>
    <string name="app_movie_rating_count">%1$.1f/5</string>
    <string name="app_movie_release_date">Release Date</string>
    <string name="app_movie_genre">Genre</string>
    <string name="app_movie_overview">Overview</string>
    <string name="app_movie_cast">Cast</string>
    <string name="app_movie_recommendations">Recommendation</string>
    <string name="title_movie">Movie</string>
    <string name="title_tv_show">TV Show</string>
    <string name="title_profile">Favorite</string>
    <string name="app_success_insert_favorite">Sukses menambahkan favorite</string>
    <string name="app_success_remove_favorite">Sukses menghapus favorite</string>
    <string name="app_no_data">No Data</string>
    <string name="app_recommendation_info_is_empty">Recommendation is empty</string>
    <string name="app_overview_info_is_empty">Overview is empty</string>
</resources>